cbits/Bullet.h

void btAxisSweep3Internal_unsignedshort__sortMinDown(void *c,int p0,short unsigned int p1,void* p2,int p3); //method: sortMinDown void ( ::btAxisSweep3Internal<unsigned short>::* )( int,short unsigned int,::btDispatcher *,bool ) 
void btAxisSweep3Internal_unsignedshort__aabbTest(void *c,float* p0,float* p1,void* p2); //method: aabbTest void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btVector3 const &,::btVector3 const &,::btBroadphaseAabbCallback & ) 
void btAxisSweep3Internal_unsignedshort__getBroadphaseAabb(void *c,float* p0,float* p1); //method: getBroadphaseAabb void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btVector3 &,::btVector3 & ) const
void btAxisSweep3Internal_unsignedshort__destroyProxy(void *c,void* p0,void* p1); //method: destroyProxy void ( ::btAxisSweep3Internal<unsigned short>::* )( ::btBroadphaseProxy *,::btDispatcher * ) 
//not supported method: getHandle ::btAxisSweep3Internal<unsigned short>::Handle * ( ::btAxisSweep3Internal<unsigned short>::* )( short unsigned int ) const
// error: short unsigned int - ok,  - unsupported

void btAxisSweep3Internal_unsignedshort__m_bpHandleMask_set(void *c,short unsigned int a); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_bpHandleMask
short unsigned int btAxisSweep3Internal_unsignedshort__m_bpHandleMask_get(void *c); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_bpHandleMask
void btAxisSweep3Internal_unsignedshort__m_handleSentinel_set(void *c,short unsigned int a); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_handleSentinel
short unsigned int btAxisSweep3Internal_unsignedshort__m_handleSentinel_get(void *c); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_handleSentinel
void btAxisSweep3Internal_unsignedshort__m_worldAabbMin_set(void *c,float* a); //attribute: ::btVector3 btAxisSweep3Internal_unsignedshort_->m_worldAabbMin
void btAxisSweep3Internal_unsignedshort__m_worldAabbMin_get(void *c,float* a);
void btAxisSweep3Internal_unsignedshort__m_worldAabbMax_set(void *c,float* a); //attribute: ::btVector3 btAxisSweep3Internal_unsignedshort_->m_worldAabbMax
void btAxisSweep3Internal_unsignedshort__m_worldAabbMax_get(void *c,float* a);
void btAxisSweep3Internal_unsignedshort__m_quantize_set(void *c,float* a); //attribute: ::btVector3 btAxisSweep3Internal_unsignedshort_->m_quantize
void btAxisSweep3Internal_unsignedshort__m_quantize_get(void *c,float* a);
void btAxisSweep3Internal_unsignedshort__m_numHandles_set(void *c,short unsigned int a); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_numHandles
short unsigned int btAxisSweep3Internal_unsignedshort__m_numHandles_get(void *c); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_numHandles
void btAxisSweep3Internal_unsignedshort__m_maxHandles_set(void *c,short unsigned int a); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_maxHandles
short unsigned int btAxisSweep3Internal_unsignedshort__m_maxHandles_get(void *c); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_maxHandles
// attribute not supported: //attribute: ::btAxisSweep3Internal<unsigned short>::Handle * btAxisSweep3Internal_unsignedshort_->m_pHandles
void btAxisSweep3Internal_unsignedshort__m_firstFreeHandle_set(void *c,short unsigned int a); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_firstFreeHandle
short unsigned int btAxisSweep3Internal_unsignedshort__m_firstFreeHandle_get(void *c); //attribute: short unsigned int btAxisSweep3Internal_unsignedshort_->m_firstFreeHandle
// attribute not supported: //attribute: ::btAxisSweep3Internal<unsigned short>::Edge *[3] btAxisSweep3Internal_unsignedshort_->m_pEdges
// attribute not supported: //attribute: void *[3] btAxisSweep3Internal_unsignedshort_->m_pEdgesRawPtr
void btAxisSweep3Internal_unsignedshort__m_pairCache_set(void *c,void* a); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedshort_->m_pairCache
void* btAxisSweep3Internal_unsignedshort__m_pairCache_get(void *c); //attribute: ::btOverlappingPairCache * btAxisSweep3Internal_unsignedshort_->m_pairCache
void btAxisSweep3Internal_unsignedshort__m_userPairCallback_set(void *c,void* a); //attribute: ::btOverlappingPairCallback * btAxisSweep3Internal_unsignedshort_->m_userPairCallback
void* btAxisSweep3Internal_unsignedshort__m_userPairCallback_get(void *c); //attribute: ::btOverlappingPairCallback * btAxisSweep3Internal_unsignedshort_->m_userPairCallback